--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-altair
-pandas
-streamlit
-gsheetsdb
-google.oauth2
+streamlit==1.19.0
+gspread==5.7.2
+oauth2client==4.1.3
+pandas==1.5.0
+numpy==1.23.3
