--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 streamlit==1.19.0
 gspread==5.7.2
-oauth2client==4.1.3
 pandas==1.3.5
 numpy==1.21.6
+google-auth==2.16.2
+google-auth-oauthlib==1.0.0
+oauthlib==3.2.2
+requests-oauthlib==1.3.1
